Fixes to model editors

--- a/projects/myrmidon/cadmus-itinera-part-lt-ui/src/lib/corr-exchanges-part/corr-exchanges-part.component.html
+++ b/projects/myrmidon/cadmus-itinera-part-lt-ui/src/lib/corr-exchanges-part/corr-exchanges-part.component.html
@@ -83,10 +83,10 @@
 
         <mat-tab label="exchange" *ngIf="editedExchange">
           <itinera-corr-exchange
-            [model]="editedExchange"
+            [exchange]="editedExchange"
             [tagEntries]="tagEntries"
             [typeEntries]="typeEntries"
-            (modelChange)="onExchangeSave($event)"
+            (exchangeChange)="onExchangeSave($event)"
             (editorClose)="onExchangeClose()"
           ></itinera-corr-exchange>
         </mat-tab>
