--- a/projects/myrmidon/cadmus-itinera-part-ms-ui/src/lib/ms-contents-part/ms-contents-part.component.html
+++ b/projects/myrmidon/cadmus-itinera-part-ms-ui/src/lib/ms-contents-part/ms-contents-part.component.html
@@ -85,9 +85,9 @@
 
         <mat-tab label="content" *ngIf="editedContent">
           <itinera-ms-content
-            [model]="editedContent"
+            [content]="editedContent"
             [stateEntries]="stateEntries"
-            (modelChange)="onContentSaved($event)"
+            (contentChange)="onContentSaved($event)"
             (editorClose)="onContentClosed()"
           ></itinera-ms-content>
         </mat-tab>
