--- a/projects/myrmidon/cadmus-itinera-part-ms-ui/src/lib/ms-material-dsc-part/ms-material-dsc-part.component.html
+++ b/projects/myrmidon/cadmus-itinera-part-ms-ui/src/lib/ms-material-dsc-part/ms-material-dsc-part.component.html
@@ -190,8 +190,8 @@
 
         <mat-tab label="palimpsest" *ngIf="editedPalimpsest">
           <itinera-ms-palimpsest
-            [model]="editedPalimpsest"
-            (modelChange)="onPalimpsestChange($event)"
+            [palimpsest]="editedPalimpsest"
+            (palimpsestChange)="onPalimpsestChange($event)"
             (editorClose)="onPalimpsestClose()"
           >
           </itinera-ms-palimpsest>
