--- a/projects/myrmidon/cadmus-itinera-part-ms-ui/src/lib/ms-watermarks-part/ms-watermarks-part.component.html
+++ b/projects/myrmidon/cadmus-itinera-part-ms-ui/src/lib/ms-watermarks-part/ms-watermarks-part.component.html
@@ -83,9 +83,9 @@
 
         <mat-tab label="watermark" *ngIf="editedWatermark">
           <itinera-ms-watermark
-            [model]="editedWatermark"
+            [watermark]="editedWatermark"
             [subjectEntries]="subjectEntries"
-            (modelChange)="onWatermarkSaved($event)"
+            (watermarkChange)="onWatermarkSaved($event)"
             (editorClose)="onWatermarkClosed()"
           ></itinera-ms-watermark>
         </mat-tab>
