--- a/projects/myrmidon/cadmus-itinera-part-lt-ui/src/lib/corr-pseudonyms-part/corr-pseudonyms-part.component.html
+++ b/projects/myrmidon/cadmus-itinera-part-lt-ui/src/lib/corr-pseudonyms-part/corr-pseudonyms-part.component.html
@@ -19,7 +19,7 @@
               <mat-icon>add_circle</mat-icon> add pseudonym
             </button>
           </div>
-          <table *ngIf="pseudonyms?.length">
+          <table *ngIf="pseudonyms?.value?.length">
             <thead>
               <tr>
                 <th></th>
@@ -31,7 +31,7 @@
             <tbody>
               <tr
                 *ngFor="
-                  let p of pseudonyms;
+                  let p of pseudonyms.value;
                   let i = index;
                   let first = first;
                   let last = last
@@ -88,8 +88,8 @@
             [pseudonym]="editedPseudonym"
             [langEntries]="langEntries"
             [tagEntries]="tagEntries"
-            (pseudonymChange)="onPseudonymSaved($event)"
-            (editorClose)="onPseudonymClosed()"
+            (pseudonymChange)="onPseudonymChange($event)"
+            (editorClose)="onPseudonymClose()"
           ></itinera-corr-pseudonym>
         </mat-tab>
       </mat-tab-group>
