--- a/projects/myrmidon/cadmus-itinera-part-ms-ui/src/lib/ms-contents-part/ms-contents-part.component.html
+++ b/projects/myrmidon/cadmus-itinera-part-ms-ui/src/lib/ms-contents-part/ms-contents-part.component.html
@@ -19,7 +19,7 @@
               <mat-icon>add_circle</mat-icon> add content
             </button>
           </div>
-          <table *ngIf="contents?.length">
+          <table *ngIf="contents?.value?.length">
             <thead>
               <tr>
                 <th></th>
@@ -31,7 +31,7 @@
             <tbody>
               <tr
                 *ngFor="
-                  let c of contents;
+                  let c of contents.value;
                   let i = index;
                   let first = first;
                   let last = last
@@ -87,8 +87,8 @@
           <itinera-ms-content
             [content]="editedContent"
             [stateEntries]="stateEntries"
-            (contentChange)="onContentSaved($event)"
-            (editorClose)="onContentClosed()"
+            (contentChange)="onContentChange($event)"
+            (editorClose)="onContentClose()"
           ></itinera-ms-content>
         </mat-tab>
       </mat-tab-group>
