--- a/projects/myrmidon/cadmus-itinera-ui/src/lib/components/chronotopes/chronotopes.component.html
+++ b/projects/myrmidon/cadmus-itinera-ui/src/lib/components/chronotopes/chronotopes.component.html
@@ -63,7 +63,7 @@
       [chronotope]="editedChronotope"
       [tagEntries]="tagEntries"
       [docRefTagEntries]="docRefTagEntries"
-      (chronotopeChange)="onChronotopeSave($event)"
+      (chronotopeChange)="onChronotopeChange($event)"
       (editorClose)="onChronotopeClose()"
     ></itinera-chronotope>
   </mat-expansion-panel>
