--- a/projects/myrmidon/cadmus-itinera-part-lt-ui/src/lib/lit-dedication/lit-dedication.component.html
+++ b/projects/myrmidon/cadmus-itinera-part-lt-ui/src/lib/lit-dedication/lit-dedication.component.html
@@ -14,13 +14,14 @@
     </mat-form-field>
   </div>
   <div>
-    <p>participants</p>
+    <h3>participants</h3>
     <itinera-decorated-ids
       [ids]="participants"
       [tagEntries]="tagEntries"
       (idsChange)="onParticipantsChange($event)"
     ></itinera-decorated-ids>
   </div>
+  <br>
   <div>
     <!-- date -->
     <div>
@@ -49,11 +50,11 @@
   <br />
   <!-- sources -->
   <div>
-    <h4>sources</h4>
+    <h3>sources</h3>
     <cadmus-doc-references
       [references]="initialSources"
       [tagEntries]="tagEntries"
-      (referencesChange)="onSourcesChanged($event)"
+      (referencesChange)="onSourcesChange($event)"
     ></cadmus-doc-references>
   </div>
 
