--- a/projects/myrmidon/cadmus-itinera-part-ms-ui/src/lib/ms-layouts-part/ms-layouts-part.component.html
+++ b/projects/myrmidon/cadmus-itinera-part-ms-ui/src/lib/ms-layouts-part/ms-layouts-part.component.html
@@ -88,7 +88,7 @@
             [dimEntries]="dimEntries"
             [rulingEntries]="rulingEntries"
             [unitEntries]="unitEntries"
-            (layoutChange)="onLayoutSave($event)"
+            (layoutChange)="onLayoutChange($event)"
             (editorClose)="onLayoutClose()"
           >
           </itinera-ms-layout>
