Refactored decorated ids component for real-time

--- a/projects/myrmidon/cadmus-itinera-part-lt-ui/src/lib/lit-dedication/lit-dedication.component.html
+++ b/projects/myrmidon/cadmus-itinera-part-lt-ui/src/lib/lit-dedication/lit-dedication.component.html
@@ -16,7 +16,7 @@
   <div>
     <h3>participants</h3>
     <itinera-decorated-ids
-      [ids]="participants"
+      [ids]="initialParticipants"
       [tagEntries]="tagEntries"
       (idsChange)="onParticipantsChange($event)"
     ></itinera-decorated-ids>
