--- a/projects/myrmidon/cadmus-itinera-part-lt-ui/src/lib/corr-exchange/corr-exchange.component.html
+++ b/projects/myrmidon/cadmus-itinera-part-lt-ui/src/lib/corr-exchange/corr-exchange.component.html
@@ -19,7 +19,7 @@
       <!-- participants -->
       <h4>participants</h4>
       <itinera-decorated-ids
-        [ids]="participants"
+        [ids]="initialParticipants"
         [tagEntries]="tagEntries"
         (idsChange)="onParticipantsChange($event)"
       ></itinera-decorated-ids>
