Fixes to correspondent exchanges editor

--- a/projects/myrmidon/cadmus-itinera-part-lt-ui/src/lib/attachments/attachments.component.html
+++ b/projects/myrmidon/cadmus-itinera-part-lt-ui/src/lib/attachments/attachments.component.html
@@ -7,7 +7,7 @@
     (click)="addAttachment()"
   >
     <mat-icon>add_circle</mat-icon>
-    add attachment
+    add
   </button>
   <table>
     <thead>
