--- a/projects/myrmidon/cadmus-itinera-ui/src/lib/components/chronotopes/chronotopes.component.html
+++ b/projects/myrmidon/cadmus-itinera-ui/src/lib/components/chronotopes/chronotopes.component.html
@@ -1,4 +1,12 @@
 <div>
+  <button
+    type="button"
+    mat-stroked-button
+    color="primary"
+    (click)="addChronotope()"
+  >
+    <mat-icon>add_circle</mat-icon> add
+  </button>
   <table *ngIf="chronotopes?.length">
     <thead>
       <tr>
@@ -57,7 +65,10 @@
       </tr>
     </tbody>
   </table>
-  <mat-expansion-panel [expanded]="editedChronotope" [disabled]="!editedChronotope">
+  <mat-expansion-panel
+    [expanded]="editedChronotope"
+    [disabled]="!editedChronotope"
+  >
     <mat-expansion-panel-header>Chronotope</mat-expansion-panel-header>
     <itinera-chronotope
       [chronotope]="editedChronotope"
