Fix to thesaurus in correspondent exchanges

--- a/projects/myrmidon/cadmus-itinera-part-lt-ui/src/lib/corr-exchanges-part/corr-exchanges-part.component.html
+++ b/projects/myrmidon/cadmus-itinera-part-lt-ui/src/lib/corr-exchanges-part/corr-exchanges-part.component.html
@@ -85,7 +85,8 @@
           <itinera-corr-exchange
             [exchange]="editedExchange"
             [tagEntries]="tagEntries"
-            [typeEntries]="typeEntries"
+            [ctTagEntries]="ctTagEntries"
+            [attTypeEntries]="attTypeEntries"
             (exchangeChange)="onExchangeChange($event)"
             (editorClose)="onExchangeClose()"
           ></itinera-corr-exchange>
