--- a/projects/myrmidon/cadmus-itinera-part-ms-ui/src/lib/ms-history-part/ms-history-part.component.css
+++ b/projects/myrmidon/cadmus-itinera-part-ms-ui/src/lib/ms-history-part/ms-history-part.component.css
@@ -1,5 +1,8 @@
+table {
+  border-collapse: collapse;
+}
 .selected {
-  background-color: #e0f5ff;
+  background-color: #f0f0c0;
 }
 th {
   text-align: left;
