History person fixes

--- a/projects/myrmidon/cadmus-itinera-part-ms-ui/src/lib/ms-history-person/ms-history-person.component.html
+++ b/projects/myrmidon/cadmus-itinera-part-ms-ui/src/lib/ms-history-person/ms-history-person.component.html
@@ -40,7 +40,8 @@
   <!-- date -->
   <h4>date</h4>
   <cadmus-historical-date-editor
-    [(date)]="date"
+    [date]="date"
+    (dateChange)="onDateChange($event)"
   ></cadmus-historical-date-editor>
 
   <!-- ids -->
