--- a/projects/myrmidon/cadmus-itinera-part-ms-ui/src/lib/ms-annotation/ms-annotation.component.html
+++ b/projects/myrmidon/cadmus-itinera-part-ms-ui/src/lib/ms-annotation/ms-annotation.component.html
@@ -57,20 +57,12 @@
     </mat-form-field>
   </div>
   <div>
-    <!-- start -->
-    <mat-form-field style="width: 5em">
-      <input matInput [formControl]="start" placeholder="start" />
-      <mat-error *ngIf="start.errors?.pattern && (start.dirty || start.touched)"
-        >invalid start</mat-error
-      >
-    </mat-form-field>
-
-    <!-- end -->
-    &nbsp;-&nbsp;
-    <mat-form-field style="width: 5em">
-      <input matInput [formControl]="end" placeholder="end" />
-      <mat-error *ngIf="end.errors?.pattern && (end.dirty || end.touched)"
-        >invalid end</mat-error
+    <!-- ranges -->
+    <mat-form-field>
+      <input matInput [formControl]="ranges" placeholder="ranges" />
+      <mat-error
+        *ngIf="ranges.errors?.pattern && (ranges.dirty || ranges.touched)"
+        >invalid range(s)</mat-error
       >
     </mat-form-field>
   </div>
